fix paragraph spacing

--- a/_sass/_contributions.scss
+++ b/_sass/_contributions.scss
@@ -44,6 +44,7 @@
     font-size: $font-size-16;
     line-height: $font-lineheight-base;
     font-weight: 200;
+    padding-bottom: .75rem;
   }
 
   .background-highlight {
